# perturb-tools

./: LICENSE  README.md  pyproject.toml  setup.py
notebooks/: anndata_demo.ipynb
notebooks/bulk/: anndata_demo.ipynb  basic_api_demo.ipynb  sample_quality_report.ipynb
perturb_tools/: __init__.py  screen_demo.ipynb
perturb_tools/_analysis/: __init__.py  _logfoldchange.py  _read_count_norm.py
perturb_tools/_arithmetic/: __init__.py  _log_fold_change.py
perturb_tools/_arithmetic/_funcs/: _SequenceManipulation.py  _fold_change.py  _log_fold_change.py
perturb_tools/_experimental_design/: __init__.py
perturb_tools/_experimental_design/_funcs/: _GTF_Module.py  _TargetModule.py  _add_region_labels.py  _add_sgRNA_context.py  _annotate_protospacer.py  _get_chromosome_sequence.py  _make_guide_library_df.py  _plot_CDS.py  _query_region_for_PAM.py  _scan_for_BsmbI.py
perturb_tools/_experimental_design/_general/: _GTF_Module.py  _TargetModule.py  _scan_for_BsmbI.py  (+10 more)
perturb_tools/_external_tools/: __init__.py
perturb_tools/_framework/: README.md  _ScreenModule.py  _screen.py  anndata_demo.ipynb  screen_demo.ipynb
perturb_tools/_normalization/: __init__.py
perturb_tools/_plotting/: __init__.py
perturb_tools/_preprocessing/: __init__.py  _preprocessing.py
perturb_tools/_qc/: __init__.py  qc.py
perturb_tools/_readwrite/: README.md  __init__.py  _write_screen.py
perturb_tools/_utilities/: README.md  __init__.py
sccrispr-tools/tools/: calculate_distance.py
sccrispr_tools/: __init__.py
sccrispr_tools/tools/: calculate_distance.py
tests/: test_screen.py
(+196 files in other folders)
